syntax = "proto3";

package gtproto;

import "auth.proto";

// 3-in-one: server configuration / ping / errors emulator
message StateRequest {
  enum Mode {
    NONE = 0;
    RETURN_SERVER_ERROR = 1;
    RETURN_INVALID_TOKEN = 2;
  }
  Mode mode = 1;
}

message StateResponse {
  // server info
  uint64 now = 1; // current server time in unix format, UTC
  string gtproto_version = 13;

  // common
  uint32 max_results_on_page = 2;
  uint32 max_actions_in_request = 14;
  uint32 max_file_size = 6; // 0 = uploads disabled, otherwise file size in bytes
  uint32 min_icon_size = 8; // min icon width / height in pixels

  // users
  repeated AuthMethod auth_methods = 10; // supported auth methods
  uint32 max_username_length = 4;
  uint32 min_password_length = 11;
  uint32 max_password_length = 12;

  // messages
  uint32 max_message_length = 5;
  uint32 max_audio_length_in_seconds = 15;
  uint32 max_uploads_for_message = 7;

  // groups
  uint32 max_group_title_length = 3;

  // task
  uint32 max_task_assignees = 18;
  uint32 max_task_title_length = 19;
  uint32 max_task_description_length = 16;
  uint32 max_board_title_length = 17;

  // notifications
  bool push_notifications_enabled = 9; // push notifications are configured and enabled on server
}
